--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@ Hong Kong SAR, China
 <h2>About Me</h2>
 
 <p>
-  Hi, I am a 4th-year Ph.D. candidate in <a href="https://cse.hkust.edu.hk/" target="_blank">Department of Computer Science and Engineering</a>, <a href="https://hkust.edu.hk/" target="_blank">Hong Kong University of Science and Technology</a>, advised by <a href="https://www.cse.ust.hk/~kaichen/" target="_blank">Prof. Kai Chen</a>. Before that, I received my B.E. degree in Electronic Science and Technology from <a href="https://www.zju.edu.cn/english/" target="_blank">Zhejiang University</a> in 2021. I am broadly interested in datacenter networking and distributed systems, with particular focuses on network protocols, high-speed networking, and networked system for AI. If you are interested in my works, feel free to drop me an email.
+  Hi, I am a final-year Ph.D. candidate in <a href="https://cse.hkust.edu.hk/" target="_blank">Department of Computer Science and Engineering</a>, <a href="https://hkust.edu.hk/" target="_blank">Hong Kong University of Science and Technology</a>, advised by <a href="https://www.cse.ust.hk/~kaichen/" target="_blank">Prof. Kai Chen</a>. Before that, I received my B.E. degree in Electronic Science and Technology from <a href="https://www.zju.edu.cn/english/" target="_blank">Zhejiang University</a> in 2021. I am broadly interested in datacenter networking and distributed systems, with particular focuses on network protocols, high-speed networking, and networked system for AI. If you are interested in my works, feel free to drop me an email.
 <p>
 
   <h2>News</h2>
   <ul id="news-list">
+    <li><p>Aug. 2025&nbsp;&nbsp; LTP and MFS accepted to EuroSys 2026.</p></li>
     <li><p>Aug. 2025&nbsp;&nbsp; Cepheus accepted to IEEE/ACM Transactions on Networking.</p></li>
     <li><p>Apr. 2025&nbsp;&nbsp; DCP, CEIO and MixNet accepted to SIGCOMM 2025.</p></li>
     <li><p>Apr. 2025&nbsp;&nbsp; FLB accepted to ATC 2025.</p></li>
@@ -106,11 +107,6 @@ document.write("Last updated "+new Date(document.lastModified).toUTCString());
 </div>
 </div>
 
-
-<!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=21405789&style=0001&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a> 
-
 <script>
   function toggleNews() {
     const newsList = document.getElementById('news-list');
@@ -125,8 +121,14 @@ document.write("Last updated "+new Date(document.lastModified).toUTCString());
   }
 </script>
 
+<br/>
+<div style="height:10px"></div>
+<script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Oo5resBJH_PMMUfihAF_THFy_H4x-O3KMcfB8psmSC8&cl=ffffff&w=a"></script>
+
 </td>
 </tr>
 </table>
+
+
 </body>
 </html>
