--- a/pub.html
+++ b/pub.html
@@ -34,46 +34,57 @@
   <ol>
   
   <li><p>
-  <b style="color: #2081be;">Revisiting RDMA Reliability for Lossy Fabrics</b> [<a href="pdf/dcp-sigcomm25.pdf" target="_blank">PDF</a>] <br/>
-  <b>Wenxue Li</b>, Xiangzhou Liu, Yunxuan Zhang, Zihao Wang, Wei Gu, Tao Qian, Gaoxiong Zeng, Shoushou Ren, Xinyang Huang, Zhenghang Ren, Bowen Liu, Junxue Zhang, Bingyang Liu, Kai Chen<br/>
-  ACM SIGCOMM 2025<br/>
+    <b style="color: #2081be;">MFS: An Efficient Model Family Serving System for Large Language Models</b> <br/>
+    Yunxuan Zhang, Hao Wang, Han Tian, Liu Yang, Xudong Liao, <u>Wenxue Li</u>, Ping Yin, Bowen Liu, Kai Chen<br/>
+    <b>ACM EuroSys</b>, Edinburgh, UK, April 2026<br/>
+  </p></li>
+
+  <li><p>
+    <b style="color: #2081be;">Learn-to-Probe: Achieving Signal Distinguishability in Learning-based Congestion Control</b> <br/>
+    Han Tian, Wenbo Li, Junxue Zhang, Xudong Liao, Decang Sun, Donghui Chen, Bin Huang, <u>Wenxue Li</u>, Yong Wang, Kai Chen<br/>
+    <b>ACM EuroSys</b>, Edinburgh, UK, April 2026<br/>
+  </p></li>
+  <li><p>
+    <b style="color: #2081be;">Revisiting RDMA Reliability for Lossy Fabrics</b> [<a href="pdf/dcp-sigcomm25.pdf" target="_blank">PDF</a>] <br/>
+    <u>Wenxue Li</u>, Xiangzhou Liu, Yunxuan Zhang, Zihao Wang, Wei Gu, Tao Qian, Gaoxiong Zeng, Shoushou Ren, Xinyang Huang, Zhenghang Ren, Bowen Liu, Junxue Zhang, Bingyang Liu, Kai Chen<br/>
+    <b>ACM SIGCOMM</b>, Coimbra, Portugal, September 2025<br/>
   </p></li>
 
   <li><p>
   <b style="color: #2081be;">MixNet: A Runtime Reconﬁgurable Optical-Electrical Fabric for Distributed Mixture-of-Experts Training</b> [<a href="pdf/mixnet-sigcomm25.pdf" target="_blank">PDF</a>] <br/>
-  Xudong Liao, Yijun Sun, Han Tian, Xinchen Wan, Yilun Jin, Zilong Wang, Zhenghang Ren, Xinyang Huang, <b>Wenxue Li</b>, Kin Fai Tse, Zhizhen Zhong, Guyue Liu, Ying Zhang, Xiaofeng Ye, Yiming Zhang, Kai Chen<br/>
-  ACM SIGCOMM 2025<br/>
+  Xudong Liao, Yijun Sun, Han Tian, Xinchen Wan, Yilun Jin, Zilong Wang, Zhenghang Ren, Xinyang Huang, <u>Wenxue Li</u>, Kin Fai Tse, Zhizhen Zhong, Guyue Liu, Ying Zhang, Xiaofeng Ye, Yiming Zhang, Kai Chen<br/>
+  <b>ACM SIGCOMM</b>, Coimbra, Portugal, September 2025<br/>
   </p></li>
 
   <li><p>
     <b style="color: #2081be;">CEIO: A Cache-Efficient Network I/O Architecture for NIC-CPU Data Paths</b> [<a href="pdf/ceio-sigcomm25.pdf" target="_blank">PDF</a>] <br/>
-    Bowen Liu, Xinyang Huang, Qijing Li, Zhuobin Huang, Yijun Sun, <b>Wenxue Li</b>, Junxue Zhang, Ping Yin, Kai Chen<br/>
-    ACM SIGCOMM 2025<br/>
+    Bowen Liu, Xinyang Huang, Qijing Li, Zhuobin Huang, Yijun Sun, <u>Wenxue Li</u>, Junxue Zhang, Ping Yin, Kai Chen<br/>
+    <b>ACM SIGCOMM</b>, Coimbra, Portugal, September 2025<br/>
   </p></li>
   <li><p>
     <b style="color: #2081be;">FLB: Fine-grained Load Balancing for Lossless Datacenter Networks</b> [<a href="pdf/flb-atc25.pdf" target="_blank">PDF</a>] [<a href="slides/flb-atc25.pdf" target="_blank">Slides</a>] <br/>
-    Jinbin Hu*, <b>Wenxue Li*</b>, Xiangzhou Liu,, Junfeng Wang, Bowen Liu, Ping Yin, Jianxin Wang, Jiawei Huang, Kai Chen<br/>
-    USENIX ATC 2025<br/>
+    Jinbin Hu*, <u>Wenxue Li*</u>, Xiangzhou Liu,, Junfeng Wang, Bowen Liu, Ping Yin, Jianxin Wang, Jiawei Huang, Kai Chen<br/>
+    <b>USENIX ATC</b>, Boston, MA, USA, July 2025<br/>
   </p></li>
   <li><p>
     <b style="color: #2081be;">Enabling Efficient GPU Communication over Multiple NICs with FuseLink</b> [<a href="pdf/fuselink-osdi25.pdf" target="_blank">PDF</a>] <br/>
-    Zhenghang Ren, Yuxuan Li, Zilong Wang, Xinyang Huang, <b>Wenxue Li</b>, Kaiqiang Xu, Xudong Liao, Yijun Sun, Bowen Liu, Han Tian, Junxue Zhang, Mingfei Wang, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen<br/>
-    USENIX OSDI 2025<br/>
+    Zhenghang Ren, Yuxuan Li, Zilong Wang, Xinyang Huang, <u>Wenxue Li</u>, Kaiqiang Xu, Xudong Liao, Yijun Sun, Bowen Liu, Han Tian, Junxue Zhang, Mingfei Wang, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen<br/>
+    <b>USENIX OSDI</b>, Boston, MA, USA, July 2025<br/>
   </p></li>
   <li><p>
     <b style="color: #2081be;">Cepheus: Accelerating Datacenter Applications with High-Performance RoCE-Capable Multicast</b> [<a href="pdf/cepheus-hpca24.pdf" target="_blank">PDF</a>] [<a href="slides/cepheus-hpca24-slides.pdf" target="_blank">Slides</a>]<br/>
-    <b>Wenxue Li*</b>, Junyi Zhang*, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen<br/>
-    IEEE HPCA 2024<br/>
+    <u>Wenxue Li*</u>, Junyi Zhang*, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen<br/>
+    <b>IEEE HPCA</b>, Edinburgh, Scotland, March 2024<br/>
   </p></li>
   <li><p>
     <b style="color: #2081be;">Towards Fine-grained and Practical Flow Control for Datacenter Networks</b> [<a href="pdf/flowsail-icnp23.pdf" target="_blank">PDF</a>] [<a href="slides/flowsail-icnp23-slides.pdf" target="_blank">Slides</a>]<br/>
-    <b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
-    IEEE ICNP 2023<br/>
+    <u>Wenxue Li</u>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
+    <b>IEEE ICNP</b>, Reykjavik, Iceland, October 2023<br/>
   </p></li>
   <li><p>
     <b style="color: #2081be;">SRNIC: A Scalable Architecture for RDMA NICs</b> [<a href="pdf/srnic-nsdi23.pdf" target="_blank">PDF</a>] [<a href="slides/srnic-nsdi23-slides.pdf" target="_blank">Slides</a>]<br/>
-    Zilong Wang, Layong Luo, Qingsong Ning, Chaoliang Zeng, <b>Wenxue Li</b>, Xinchen Wan, Peng Xie, Tao Feng, Ke Cheng, Xiongfei Geng, Tianhao Wang, Weicheng Ling, Kejia Huo, Pingbo An, Kui Ji, Shideng Zhang, Bin Xu, Ruiqing Feng, Tao Ding, Kai Chen, Chuanxiong Guo<br/>
-    USENIX NSDI 2023<br/>
+    Zilong Wang, Layong Luo, Qingsong Ning, Chaoliang Zeng, <u>Wenxue Li</u>, Xinchen Wan, Peng Xie, Tao Feng, Ke Cheng, Xiongfei Geng, Tianhao Wang, Weicheng Ling, Kejia Huo, Pingbo An, Kui Ji, Shideng Zhang, Bin Xu, Ruiqing Feng, Tao Ding, Kai Chen, Chuanxiong Guo<br/>
+    <b>USENIX NSDI</b>, Boston, MA, USA, April 2023<br/>
   </p></li>
 
 </ol>
@@ -83,14 +94,14 @@
 
 <li><p>
 <b style="color: #2081be;">High-Performance RoCE-Capable Multicast for Commodity RDMA Datacenters</b><br/>
-<b>Wenxue Li</b>, Junyi Zhang, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen<br/>
-IEEE/ACM Transactions on Networking (TON) 2025<br/>
+<u>Wenxue Li</u>, Junyi Zhang, Yufei Liu, Gaoxiong Zeng, Zilong Wang, Chaoliang Zeng, Pengpeng Zhou, Qiaoling Wang, Kai Chen<br/>
+<b>IEEE/ACM Transactions on Networking (TON)</b>, 2025<br/>
 </p></li>
 
 <li><p>
 <b style="color: #2081be;">FlowSail: Fine-grained and Practical Flow Control for Datacenter Networks</b><br/>
-<b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
-IEEE/ACM Transactions on Networking (TON) 2024<br/>
+<u>Wenxue Li</u>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
+<b>IEEE/ACM Transactions on Networking (TON)</b>, 2024<br/>
 </p></li>
 
 </ol>
@@ -100,23 +111,23 @@ IEEE/ACM Transactions on Networking (TON) 2024<br/>
 
 <li><p>
 <b style="color: #2081be;">Enabling Packet Spraying over Commodity RNICs with In-Network Support</b> [<a href="pdf/themis-apnet25.pdf" target="_blank">PDF</a>] <br/>
-Xiangzhou Liu, <b>Wenxue Li</b>, Kai Chen<br/>
-APNet 2025<br/>
+Xiangzhou Liu, <u>Wenxue Li</u>, Kai Chen<br/>
+<b>APNet</b>, Shanghai, China, August 2025<br/>
 </p></li>
 <li><p>
 <b style="color: #2081be;">Congestion Control for AI Workloads with Message-Level Signaling</b> [<a href="pdf/mcc-apnet25.pdf" target="_blank">PDF</a>] <br/>
-Yuxuan Li, Zhenghang Ren, <b>Wenxue Li</b>, Xiangzhou Liu, Kai Chen<br/>
-APNet 2025<br/>
+Yuxuan Li, Zhenghang Ren, <u>Wenxue Li</u>, Xiangzhou Liu, Kai Chen<br/>
+<b>APNet</b>, Shanghai, China, August 2025<br/>
 </p></li>
 <li><p>
 <b style="color: #2081be;">Understanding Communication Characteristics of Distributed Training</b> [<a href="pdf/understanding-apnet24.pdf" target="_blank">PDF</a>] [<a href="slides/understanding-apnet24-slides.pdf" target="_blank">Slides</a>]<br/>
-<b>Wenxue Li</b>, Xiangzhou Liu, Yuxuan Li, Yilun Jin, Han Tian, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen<br/>
-APNet 2024<br/>
+<u>Wenxue Li</u>, Xiangzhou Liu, Yuxuan Li, Yilun Jin, Han Tian, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen<br/>
+<b>APNet</b>, Sydney, Australia, August 2024<br/>
 </p></li>
 <li><p>
 <b style="color: #2081be;">Scaling Switch-driven Flow Control with Aquarius</b> [<a href="pdf/aquarius-apnet23.pdf" target="_blank">PDF</a>] [<a href="slides/aquarius-apnet23-slides.pdf" target="_blank">Slides</a>]<br/>
-<b>Wenxue Li</b>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
-APNet 2023<br/>
+<u>Wenxue Li</u>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
+<b>APNet</b>, Hong Kong SAR, June 2023<br/>
 </p></li>
 
 </ol>
