--- a/index.html
+++ b/index.html
@@ -123,7 +123,18 @@ document.write("Last updated "+new Date(document.lastModified).toUTCString());
 
 <br/>
 <div style="height:10px"></div>
-<script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=Oo5resBJH_PMMUfihAF_THFy_H4x-O3KMcfB8psmSC8&cl=ffffff&w=a"></script>
+<div style="text-align: center;">
+  <div id="mapmyvisitors" style="max-width: 400px; margin: 0 auto; transform: scale(0.8); transform-origin: center center; min-height: 200px;"></div>
+</div>
+<script type="text/javascript">
+  // 确保DOM加载完成后再加载地图脚本
+  document.addEventListener('DOMContentLoaded', function() {
+    var script = document.createElement('script');
+    script.type = 'text/javascript';
+    script.src = '//mapmyvisitors.com/map.js?d=Oo5resBJH_PMMUfihAF_THFy_H4x-O3KMcfB8psmSC8&cl=ffffff&w=a';
+    document.head.appendChild(script);
+  });
+</script>
 
 </td>
 </tr>
