--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ Hong Kong SAR, China
 
   <h2>News</h2>
   <ul id="news-list">
+    <li><p>Sep. 2025&nbsp;&nbsp; DCP awarded SIGCOMM'25 Best Student Paper Award Honorable Mention!</p></li>
     <li><p>Aug. 2025&nbsp;&nbsp; LTP and MFS accepted to EuroSys 2026.</p></li>
     <li><p>Aug. 2025&nbsp;&nbsp; Cepheus accepted to IEEE/ACM Transactions on Networking.</p></li>
     <li><p>Apr. 2025&nbsp;&nbsp; DCP, CEIO and MixNet accepted to SIGCOMM 2025.</p></li>
@@ -88,7 +89,8 @@ Hong Kong SAR, China
 
   <h2>Honors</h2>
   <ul>
-    <li><p>SIGCOMM 2025 Travel Grants (2025) </p></li>
+    <li><p><b>SIGCOMM'25 Best Student Paper Award Honorable Mention </b></p></li>
+    <li><p>SIGCOMM 2025 N2Women Travel Grants (2025) </p></li>
     <li><p>ATC 2025 Travel Grants (2025) </p></li>
     <li><p>HPCA 2024 Travel Grants (2024) </p></li>
     <li><p>HKUST Research Travel Grants (2023 Fall, 2024 Spring, 2024 Summer) </p></li>
