--- a/pub.html
+++ b/pub.html
@@ -45,9 +45,10 @@
     <b>ACM EuroSys</b>, Edinburgh, UK, April 2026<br/>
   </p></li>
   <li><p>
-    <b style="color: #2081be;">Revisiting RDMA Reliability for Lossy Fabrics</b> [<a href="pdf/dcp-sigcomm25.pdf" target="_blank">PDF</a>] <br/>
+    <b style="color: #2081be;">Revisiting RDMA Reliability for Lossy Fabrics</b> [<a href="pdf/dcp-sigcomm25.pdf" target="_blank">PDF</a>]<br/>
     <u>Wenxue Li</u>, Xiangzhou Liu, Yunxuan Zhang, Zihao Wang, Wei Gu, Tao Qian, Gaoxiong Zeng, Shoushou Ren, Xinyang Huang, Zhenghang Ren, Bowen Liu, Junxue Zhang, Bingyang Liu, Kai Chen<br/>
     <b>ACM SIGCOMM</b>, Coimbra, Portugal, September 2025<br/>
+    <img src="img/award.png" alt="award" style="height:2em; vertical-align:middle; margin-right:4px;" /><b style="color: red">Best Student Paper Award Honorable Mention</b>
   </p></li>
 
   <li><p>
