--- a/pub.html
+++ b/pub.html
@@ -48,7 +48,7 @@
     <b style="color: #2081be;">Revisiting RDMA Reliability for Lossy Fabrics</b> [<a href="pdf/dcp-sigcomm25.pdf" target="_blank">PDF</a>]<br/>
     <u>Wenxue Li</u>, Xiangzhou Liu, Yunxuan Zhang, Zihao Wang, Wei Gu, Tao Qian, Gaoxiong Zeng, Shoushou Ren, Xinyang Huang, Zhenghang Ren, Bowen Liu, Junxue Zhang, Bingyang Liu, Kai Chen<br/>
     <b>ACM SIGCOMM</b>, Coimbra, Portugal, September 2025<br/>
-    <img src="img/award.png" alt="award" style="height:2em; vertical-align:middle; margin-right:4px;" /><b style="color: red">Best Student Paper Award Honorable Mention</b>
+    <img src="img/award.png" alt="award" style="height:1.5em; vertical-align:middle; margin-right:4px;" /><b style="color: rgb(185, 49, 49)">Best Student Paper Award Honorable Mention</b>
   </p></li>
 
   <li><p>
