--- a/pub.html
+++ b/pub.html
@@ -45,8 +45,8 @@
     <b>ACM EuroSys</b>, Edinburgh, UK, April 2026<br/>
   </p></li>
   <li><p>
-    <b style="color: #2081be;">Revisiting RDMA Reliability for Lossy Fabrics</b> [<a href="pdf/dcp-sigcomm25.pdf" target="_blank">PDF</a>]<br/>
-    <u>Wenxue Li</u>, Xiangzhou Liu, Yunxuan Zhang, Zihao Wang, Wei Gu, Tao Qian, Gaoxiong Zeng, Shoushou Ren, Xinyang Huang, Zhenghang Ren, Bowen Liu, Junxue Zhang, Bingyang Liu, Kai Chen<br/>
+    <b style="color: #2081be;">Revisiting RDMA Reliability for Lossy Fabrics</b> [<a href="pdf/dcp-sigcomm25.pdf" target="_blank">PDF</a>] [<a href="slides/dcp-sigcomm25.pdf" target="_blank">Slides</a>] <br/>
+    <u>Wenxue Li</u>, Xiangzhou Liu, Yunxuan Zhang, Zihao Wang, Wei Gu, Tao Qian, Gaoxiong Zeng, Shoushou Ren, Xinyang Huang, Zhenghang Ren, Bowen Liu, Junxue Zhang, Kai Chen, Bingyang Liu<br/>
     <b>ACM SIGCOMM</b>, Coimbra, Portugal, September 2025<br/>
     <img src="img/award.png" alt="award" style="height:1.5em; vertical-align:middle; margin-right:4px;" /><b style="color: rgb(185, 49, 49)">Best Student Paper Award Honorable Mention</b>
   </p></li>
