--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
 
 <h2>Journal Reviewer</h2>
 <ul>
-    <li> ACM Transactions on Privacy and Security (TOPS), 2024 </li>
+    <li> 2024: ACM Transactions on Privacy and Security (TOPS) </li>
 </ul>
 
 <h2>Teaching Assistant</h2>
