--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@ Hong Kong SAR, China
 const lastModified = new Date(document.lastModified);
 const month = String(lastModified.getMonth() + 1).padStart(2, '0');
 const year = lastModified.getFullYear();
-document.write("Last updated: "+year+"-"+month);
+<!-- document.write("Last updated: "+year+"-"+month); -->
+document.write("Last updated: Jan 2026");
 </script>
 &nbsp;&nbsp;&nbsp;&nbsp;
 </div>
@@ -154,7 +155,7 @@ document.write("Last updated: "+year+"-"+month);
 <table class="map-table">
 <tr><td>
   <div class="visitor-map">
-    <script type="text/javascript" id="mapmyvisitors" src="//mapmyvisitors.com/map.js?d=bcuphE-tgAvDhteVfZT30VFP22uiAJtNTP_04ySXFS4&cl=ffffff&w=a"></script>
+    <script type='text/javascript' id='mapmyvisitors' src='https://mapmyvisitors.com/map.js?cl=ffffff&w=a&t=tt&d=bcuphE-tgAvDhteVfZT30VFP22uiAJtNTP_04ySXFS4'></script>
   </div>
 </td>
 </tr>
