--- a/pub.html
+++ b/pub.html
@@ -72,6 +72,16 @@
     <b>ACM SIGCOMM</b>, Coimbra, Portugal, September 2025<br/>
   </p></li>
   <li><p>
+  <b style="color: #2081be;">Enabling Packet Spraying over Commodity RNICs with In-Network Support</b> [<a href="pdf/themis-apnet25.pdf" target="_blank">PDF</a>] <br/>
+  Xiangzhou Liu, <u>Wenxue Li</u>, Kai Chen<br/>
+  <b>APNet</b>, Shanghai, China, August 2025<br/>
+  </p></li>
+  <li><p>
+  <b style="color: #2081be;">Congestion Control for AI Workloads with Message-Level Signaling</b> [<a href="pdf/mcc-apnet25.pdf" target="_blank">PDF</a>] <br/>
+  Yuxuan Li, Zhenghang Ren, <u>Wenxue Li</u>, Xiangzhou Liu, Kai Chen<br/>
+  <b>APNet</b>, Shanghai, China, August 2025<br/>
+  </p></li>
+  <li><p>
     <b style="color: #2081be;">FLB: Fine-grained Load Balancing for Lossless Datacenter Networks</b> [<a href="pdf/flb-atc25.pdf" target="_blank">PDF</a>] [<a href="slides/flb-atc25.pdf" target="_blank">Slides</a>] <br/>
     Jinbin Hu*, <u>Wenxue Li*</u>, Xiangzhou Liu,, Junfeng Wang, Bowen Liu, Ping Yin, Jianxin Wang, Jiawei Huang, Kai Chen<br/>
     <b>USENIX ATC</b>, Boston, MA, USA, July 2025<br/>
@@ -80,6 +90,11 @@
     <b style="color: #2081be;">Enabling Efficient GPU Communication over Multiple NICs with FuseLink</b> [<a href="pdf/fuselink-osdi25.pdf" target="_blank">PDF</a>] <br/>
     Zhenghang Ren, Yuxuan Li, Zilong Wang, Xinyang Huang, <u>Wenxue Li</u>, Kaiqiang Xu, Xudong Liao, Yijun Sun, Bowen Liu, Han Tian, Junxue Zhang, Mingfei Wang, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen<br/>
     <b>USENIX OSDI</b>, Boston, MA, USA, July 2025<br/>
+  </p></li>
+  <li><p>
+  <b style="color: #2081be;">Understanding Communication Characteristics of Distributed Training</b> [<a href="pdf/understanding-apnet24.pdf" target="_blank">PDF</a>] [<a href="slides/understanding-apnet24-slides.pdf" target="_blank">Slides</a>]<br/>
+  <u>Wenxue Li</u>, Xiangzhou Liu, Yuxuan Li, Yilun Jin, Han Tian, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen<br/>
+  <b>APNet</b>, Sydney, Australia, August 2024<br/>
   </p></li>
   <li><p>
     <b style="color: #2081be;">Cepheus: Accelerating Datacenter Applications with High-Performance RoCE-Capable Multicast</b> [<a href="pdf/cepheus-hpca24.pdf" target="_blank">PDF</a>] [<a href="slides/cepheus-hpca24-slides.pdf" target="_blank">Slides</a>]<br/>
@@ -95,6 +110,11 @@
     <b style="color: #2081be;">SRNIC: A Scalable Architecture for RDMA NICs</b> [<a href="pdf/srnic-nsdi23.pdf" target="_blank">PDF</a>] [<a href="slides/srnic-nsdi23-slides.pdf" target="_blank">Slides</a>]<br/>
     Zilong Wang, Layong Luo, Qingsong Ning, Chaoliang Zeng, <u>Wenxue Li</u>, Xinchen Wan, Peng Xie, Tao Feng, Ke Cheng, Xiongfei Geng, Tianhao Wang, Weicheng Ling, Kejia Huo, Pingbo An, Kui Ji, Shideng Zhang, Bin Xu, Ruiqing Feng, Tao Ding, Kai Chen, Chuanxiong Guo<br/>
     <b>USENIX NSDI</b>, Boston, MA, USA, April 2023<br/>
+  </p></li>
+  <li><p>
+  <b style="color: #2081be;">Scaling Switch-driven Flow Control with Aquarius</b> [<a href="pdf/aquarius-apnet23.pdf" target="_blank">PDF</a>] [<a href="slides/aquarius-apnet23-slides.pdf" target="_blank">Slides</a>]<br/>
+  <u>Wenxue Li</u>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
+  <b>APNet</b>, Hong Kong SAR, June 2023<br/>
   </p></li>
 
 </ol>
@@ -116,31 +136,10 @@
 
 </ol>
 
-<h2>Workshop</h2>
+<!-- <h2>Workshop</h2>
 <ol>
 
-<li><p>
-<b style="color: #2081be;">Enabling Packet Spraying over Commodity RNICs with In-Network Support</b> [<a href="pdf/themis-apnet25.pdf" target="_blank">PDF</a>] <br/>
-Xiangzhou Liu, <u>Wenxue Li</u>, Kai Chen<br/>
-<b>APNet</b>, Shanghai, China, August 2025<br/>
-</p></li>
-<li><p>
-<b style="color: #2081be;">Congestion Control for AI Workloads with Message-Level Signaling</b> [<a href="pdf/mcc-apnet25.pdf" target="_blank">PDF</a>] <br/>
-Yuxuan Li, Zhenghang Ren, <u>Wenxue Li</u>, Xiangzhou Liu, Kai Chen<br/>
-<b>APNet</b>, Shanghai, China, August 2025<br/>
-</p></li>
-<li><p>
-<b style="color: #2081be;">Understanding Communication Characteristics of Distributed Training</b> [<a href="pdf/understanding-apnet24.pdf" target="_blank">PDF</a>] [<a href="slides/understanding-apnet24-slides.pdf" target="_blank">Slides</a>]<br/>
-<u>Wenxue Li</u>, Xiangzhou Liu, Yuxuan Li, Yilun Jin, Han Tian, Zhizhen Zhong, Guyue Liu, Ying Zhang, Kai Chen<br/>
-<b>APNet</b>, Sydney, Australia, August 2024<br/>
-</p></li>
-<li><p>
-<b style="color: #2081be;">Scaling Switch-driven Flow Control with Aquarius</b> [<a href="pdf/aquarius-apnet23.pdf" target="_blank">PDF</a>] [<a href="slides/aquarius-apnet23-slides.pdf" target="_blank">Slides</a>]<br/>
-<u>Wenxue Li</u>, Chaoliang Zeng, Jinbin Hu, Kai Chen<br/>
-<b>APNet</b>, Hong Kong SAR, June 2023<br/>
-</p></li>
-
-</ol>
+</ol> -->
 
 <div id="footer" >
 <div id="footer-text">
