--- a/pub.html
+++ b/pub.html
@@ -141,14 +141,14 @@
 
 </ol> -->
 
-<div id="footer" >
+<!-- <div id="footer" >
 <div id="footer-text">
 <script type="text/javascript">
 document.write("Last updated "+new Date(document.lastModified).toUTCString());
 </script>
 &nbsp;&nbsp;&nbsp;&nbsp;
 </div>
-</div>
+</div> -->
 
 </td>
 </tr>
